testdata/snapshots/hgrep__tests__ripgrep_config__max_count_parse_error.snap
---
source: src/main.rs
expression: msg
---
"Could not parse --max-count option value as unsigned integer -> invalid digit found in string"
