testdata/snapshots/hgrep__tests__ripgrep_config__max_depth_parse_error.snap
---
source: src/main.rs
expression: msg
---
"Could not parse --max-depth option value as unsigned integer -> invalid digit found in string"
