testdata/snapshots/hgrep__tests__ripgrep_config__max_filesize_parse_error.snap
---
source: src/main.rs
expression: msg
---
"Could not parse --max-filesize option value as file size string -> Could not parse \"foo\" as unsigned integer -> invalid digit found in string"
